--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,7 @@
     <header>
         <nav>
             <a href="index.html" class="logo"><img src="img/logo.png" alt="Logo" /></a>
+            <button class="hamburger">&#9776;</button> <!-- Hamburger button -->
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="aboutme.html">About Us</a>
@@ -24,6 +25,7 @@
             </div>
         </nav>
     </header>
+
 
     <!-- MAIN CONTENT -->
     <div class="container">
@@ -111,11 +113,13 @@
             <div class="swiper-button-prev"></div>
         </div>
 
-    </div> 
+    </div> <!-- PENUTUP CONTAINER -->
 
+    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="swiper-init.js"></script>
+    <script src="script.js"></script>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section about">
@@ -161,4 +165,5 @@
         </div>
     </footer>
 </body>
+
 </html>
