--- a/courses.html
+++ b/courses.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html" class="logo"><img src="img/logo.png" alt="Logo" /></a>
+            <button class="hamburger">&#9776;</button> <!-- Hamburger button -->
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="aboutme.html">About Us</a>
