--- a/faqs.html
+++ b/faqs.html
@@ -77,16 +77,7 @@
         </div>
     </div>
 
-    <script>
-        const questions = document.querySelectorAll('.faq-question');
-        questions.forEach(question => {
-            question.addEventListener('click', () => {
-                question.classList.toggle('active');
-                const answer = question.nextElementSibling;
-                answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 
     <footer class="footer">
         <div class="footer-container">
