--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </section>
-
+<script src="script.js"></script>
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section about">
