--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B-One Computer - About Us</title>
+    <title>About Us | B-One Computer</title>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
 
     <!-- Swiper CSS -->
